--- a/public/css/style.css
+++ b/public/css/style.css
@@ -621,8 +621,20 @@ video {
   top: 100%;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .z-10 {
   z-index: 10;
+}
+
+.float-right {
+  float: right;
+}
+
+.float-left {
+  float: left;
 }
 
 .mx-8 {
@@ -644,6 +656,18 @@ video {
 
 .mt-20 {
   margin-top: 5rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
 }
 
 .block {
@@ -674,16 +698,24 @@ video {
   display: none;
 }
 
-.h-\[176px\] {
-  height: 176px;
-}
-
 .h-\[266px\] {
   height: 266px;
 }
 
+.h-\[176px\] {
+  height: 176px;
+}
+
 .h-\[47px\] {
   height: 47px;
+}
+
+.h-\[22px\] {
+  height: 22px;
+}
+
+.h-\[53px\] {
+  height: 53px;
 }
 
 .w-full {
@@ -698,8 +730,24 @@ video {
   width: 246px;
 }
 
+.w-\[51px\] {
+  width: 51px;
+}
+
+.w-\[287px\] {
+  width: 287px;
+}
+
 .max-w-\[250px\] {
   max-width: 250px;
+}
+
+.flex-grow-0 {
+  flex-grow: 0;
+}
+
+.flex-grow {
+  flex-grow: 1;
 }
 
 .origin-top-left {
@@ -726,6 +774,10 @@ video {
   resize: both;
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -740,6 +792,18 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
+.self-start {
+  align-self: flex-start;
 }
 
 .self-center {
@@ -790,6 +854,16 @@ video {
   background-color: rgb(20 184 166 / var(--tw-bg-opacity));
 }
 
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-90 {
   --tw-bg-opacity: 0.9;
 }
@@ -814,8 +888,17 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .pt-36 {
   padding-top: 9rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .text-center {
@@ -839,6 +922,11 @@ video {
 
 .text-\[13px\] {
   font-size: 13px;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -957,6 +1045,14 @@ video {
   .md\:w-1\/2 {
     width: 50%;
   }
+
+  .md\:w-2\/4 {
+    width: 50%;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -984,6 +1080,18 @@ video {
     width: 50%;
   }
 
+  .lg\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
+  .lg\:w-2\/4 {
+    width: 50%;
+  }
+
   .lg\:max-w-full {
     max-width: 100%;
   }
@@ -992,6 +1100,10 @@ video {
     --tw-scale-x: 1;
     --tw-scale-y: 1;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:justify-center {
+    justify-content: center;
   }
 
   .lg\:justify-evenly {
@@ -1029,5 +1141,15 @@ video {
     --tw-shadow: 0 0 #0000;
     --tw-shadow-colored: 0 0 #0000;
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:w-1\/2 {
+    width: 50%;
+  }
+
+  .xl\:w-2\/4 {
+    width: 50%;
   }
 }
