--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1196,6 +1196,10 @@ video {
     line-height: 1;
   }
 
+  .lg\:font-bold {
+    font-weight: 700;
+  }
+
   .lg\:shadow-none {
     --tw-shadow: 0 0 #0000;
     --tw-shadow-colored: 0 0 #0000;
